Fourth commit, fix problem that wasn't allowed start app, update pom.xml and rework service and controller. Add some change to Developer and Employer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Details for our database
-spring.framework.url = jdbc:postgresql://localhost:5432/javatest
-spring.datasource.username = nikita
-spring.datasource.password =
+spring.datasource.url = jdbc:postgresql://localhost:5432/developers
+spring.datasource.username = postgres
+spring.datasource.password = zxc123vbnm45
 
 #Hibernate properties
 spring.jpa.show-sql = true
