Fifth commit, update application.properties: -add new user and remove get access to db from superuser(postgres)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Details for our database
 spring.datasource.url = jdbc:postgresql://localhost:5432/developers
-spring.datasource.username = postgres
+spring.datasource.username = daage
 spring.datasource.password = zxc123vbnm45
 
 #Hibernate properties
